fix phone and mailto links

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@ layout: default
             <p>Appliance repair service for Logan and surrounding counties in southern West Virgina</p>
             <footer>
               <ul class="nospace inline pushright">
-                <li><a class="btn" href="#"><i class="fa fa-phone"></i> Call</a></li>
-                <li><a class="btn" href="#"><i class="fa fa-envelope-o"></i> Message</a></li>
+                <li><a class="btn" href="tel:+13047840172"><i class="fa fa-phone"></i> Call</a></li>
+                <li><a class="btn" href="mailto:melhoir@gmail.com"><i class="fa fa-envelope-o"></i> Message</a></li>
               </ul>
             </footer>
           </article>
@@ -47,8 +47,8 @@ layout: default
       </div>
       <footer>
         <ul class="nospace inline pushright">
-          <li><a class="btn" href="#"><i class="fa fa-phone"></i> Call</a></li>
-          <li><a class="btn" href="#"><i class="fa fa-envelope-o"></i> Message</a></li>
+          <li><a class="btn" href="tel:+13047840172"><i class="fa fa-phone"></i> Call</a></li>
+          <li><a class="btn" href="mailto:melhoir@gmail.com"><i class="fa fa-envelope-o"></i> Message</a></li>
         </ul>
       </footer>
       <!-- ################################################################################################ -->
@@ -65,7 +65,7 @@ layout: default
       <h2 class="heading">We know the routine</h2>
       <p>And hear the stories.</p>
       <p>Search for appliance repair companies and read through endless reviews only to find yourself reading that fix it all tutorial.. That is about the time most realise they are holding the tech sheet upside down. We understand first hand, appliances are valuable, but more importantly, so is your time! Let BoldnRepair get your appliance working now, so you can get back to spending your time on more important things.</p>
-      <footer><a class="btn inverse" href="#">Call Today</a></footer>
+      <footer><a class="btn inverse" href="tel:+13047840172">Call Today</a></footer>
     </article>
     <!-- ################################################################################################ -->
   </div>
