add disqus to site

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+comments: true
 ---
 <div class="bgded overlay" style="background-image:url('https://images.pexels.com/photos/77502/flame-fire-oven-light-77502.jpeg?w=1260&h=750&auto=compress&cs=tinysrgb');">
   <div id="pageintro" class="hoc clear"> 
@@ -70,3 +71,22 @@ layout: default
     <!-- ################################################################################################ -->
   </div>
 </div>
+{% if page.comments %}
+
+<div id="disqus_thread"></div>
+<script>
+var disqus_config = function () {
+this.page.url = "http://boldnrepair.com/";
+this.page.identifier = "{{ page.id }}";
+};
+*/
+(function() { // DON'T EDIT BELOW THIS LINE
+var d = document, s = d.createElement('script');
+s.src = '//boldnrepair.disqus.com/embed.js';
+s.setAttribute('data-timestamp', +new Date());
+(d.head || d.body).appendChild(s);
+})();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+
+{% endif %}
