--- a/index.html
+++ b/index.html
@@ -71,13 +71,19 @@ comments: true
     <!-- ################################################################################################ -->
   </div>
 </div>
+<div class="wrapper disqus">
 {% if page.comments %}
 
 <div id="disqus_thread"></div>
 <script>
+
+/**
+*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+/*
 var disqus_config = function () {
-this.page.url = "http://boldnrepair.com/";
-this.page.identifier = "{{ page.id }}";
+this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
 };
 */
 (function() { // DON'T EDIT BELOW THIS LINE
@@ -88,5 +94,7 @@ s.setAttribute('data-timestamp', +new Date());
 })();
 </script>
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+                                
 
 {% endif %}
+</div>
