--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
-layout: default
-comments: true
+layout: nope
+comments: false
 ---
 
 <h1 style:margin-top:250px; text-algin: center; font-size: 56px">&#x2620;</h1>
