--- a/index.html
+++ b/index.html
@@ -3,4 +3,4 @@ layout: nope
 comments: false
 ---
 
-<h1 style:margin-top:250px; text-algin: center; font-size: 56px">&#x2620;</h1>
+<h1 style="margin-top:250px; text-algin: center; font-size: 56px">&#x2620;</h1>
